--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+            <a class="nav-link js-scroll-trigger" href="#education">Educação</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+            <a class="nav-link js-scroll-trigger" href="#interests">Interesses</a>
           </li>
         </ul>
       </div>
@@ -66,7 +66,7 @@
           </div>
           <p class="mb-5">...</p>
           <ul class="list-inline list-social-icons mb-0">
-            <li class="list-inline-item">
+            <li class="list-inline-item" title="Facebook">
               <a href="https://www.facebook.com/eduardoluiz17">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -74,24 +74,24 @@
                 </span>
               </a>
             </li>
-            <li class="list-inline-item">
-              <a href="#">
+            <li class="list-inline-item" title="Medium">
+              <a href="https://medium.com/@eduardoluizs">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                  <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
-            <li class="list-inline-item">
-              <a href="#">
+            <li class="list-inline-item" title="Linkedin">
+              <a href="https://www.linkedin.com/in/eduardoluizs/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
-            <li class="list-inline-item">
-              <a href="#">
+            <li class="list-inline-item" title="GitHub">
+              <a href="https://github.com/eduardoluiz7">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -126,25 +126,25 @@
           <div class="subheading mb-3">Linguagens de Programação &amp; Ferramentas</div>
           <ul class="list-inline list-icons">
             <li class="list-inline-item">
-              <i class="devicons devicons-python"></i>
+              <i class="devicons devicons-python" title="Python"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-java"></i>
+              <i class="devicons devicons-java" title="Java"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
+              <i class="devicons devicons-html5" title="HTML5"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
+              <i class="devicons devicons-css3" title="CSS3"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
+              <i class="devicons devicons-javascript" title="Javascript"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-jquery"></i>
+              <i class="devicons devicons-jquery" title="JQuery"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
+              <i class="devicons devicons-bootstrap" title="Bootstrap"></i>
             </li>
           </ul>
         </div>
