--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Eduardo Luiz - Em construção!!</title>
+    <title>Eduardo Luiz - Página Pessoal</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -64,7 +64,7 @@
           <div class="subheading mb-5">Recife-PE, Brazil · (81) 99966-6761 ·
             <a href="mailto:name@email.com">els6@cin.ufpe.br</a>
           </div>
-          <p class="mb-5">...</p>
+          <p class="mb-5">Sou estudante de Ciência da Computação na Universidade Federal de Pernambuco. Tenho como foco as áreas de Data Science, Deep Learning e desenvolvimento web. Sempre em busca de aprendizado e desenvolvimento de valores.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item" title="Facebook">
               <a href="https://www.facebook.com/eduardoluiz17">
@@ -153,8 +153,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interesses</h2>
-          <p>.</p>
-          <p class="mb-0">.</p>
+          <p>Além dos estudos em Ciência da Computação gosto de praticar esportes como futebol e basquete. Sou apaixonado por fotografia e assim desenvolvi habilidades com edição de imagens e vídeos.</p>
+          <p class="mb-0">No meu tempo em casa costumo ler livros e ouvir diversos podcasts sobre tecnologia. Além disso, gosto de ler e assistir as diversas obras da cultura geek.</p>
         </div>
       </section>
     </div>
