--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <p class="mb-5">Sou estudante de Ciência da Computação na Universidade Federal de Pernambuco. Tenho como foco as áreas de Data Science, Deep Learning e desenvolvimento web. Sempre em busca de aprendizado e desenvolvimento de valores.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item" title="Facebook">
-              <a href="https://www.facebook.com/eduardoluiz17">
+              <a href="https://www.facebook.com/eduardoluiz17" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -75,7 +75,7 @@
               </a>
             </li>
             <li class="list-inline-item" title="Medium">
-              <a href="https://medium.com/@eduardoluizs">
+              <a href="https://medium.com/@eduardoluizs" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
@@ -83,7 +83,7 @@
               </a>
             </li>
             <li class="list-inline-item" title="Linkedin">
-              <a href="https://www.linkedin.com/in/eduardoluizs/">
+              <a href="https://www.linkedin.com/in/eduardoluizs/" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -91,7 +91,7 @@
               </a>
             </li>
             <li class="list-inline-item" title="GitHub">
-              <a href="https://github.com/eduardoluiz7">
+              <a href="https://github.com/eduardoluiz7" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
