--- a/index.html
+++ b/index.html
@@ -146,6 +146,12 @@
             <li class="list-inline-item">
               <i class="devicons devicons-bootstrap" title="Bootstrap"></i>
             </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-photoshop" title="Photoshop"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-illustrator" title="Illustrator"></i>
+            </li>
           </ul>
         </div>
       </section>
