--- a/index.html
+++ b/index.html
@@ -129,22 +129,22 @@
               <i class="devicons devicons-python" title="Python"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-java" title="Java"></i>
+              <i class="devicons devicons-angular" title="Angular"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-html5" title="HTML5"></i>
+              <i class="devicons devicons-nodejs" title="Node.js"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-css3" title="CSS3"></i>
+              <i class="devicons devicons-mongodb" title="mongodb"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-ionic" title="ionic"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-javascript" title="Javascript"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-jquery" title="JQuery"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap" title="Bootstrap"></i>
+              <i class="devicons devicons-java" title="Java"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-photoshop" title="Photoshop"></i>
