--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpeg" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interesses</a>
+            <a class="nav-link js-scroll-trigger" href="#interests">Experiências</a>
           </li>
         </ul>
       </div>
@@ -61,10 +61,12 @@
           <h1 class="mb-0">Eduardo
             <span class="text-primary">Luiz</span>
           </h1>
-          <div class="subheading mb-5">Recife-PE, Brazil · (81) 99966-6761 ·
-            <a href="mailto:name@email.com">els6@cin.ufpe.br</a>
+          <div class="subheading mb-5">Recife-PE, Brazil · (81) 97304-3045 ·
+            <a href="mailto:name@email.com">eduardoluiz017@gmail.com</a>
           </div>
-          <p class="mb-5">Sou estudante de Ciência da Computação na Universidade Federal de Pernambuco. Tenho como foco as áreas de Data Science, Deep Learning e desenvolvimento web. Sempre em busca de aprendizado e desenvolvimento de valores.</p>
+          <p class="mb-5">Bacharel em Ciência da Computação atuando há 5 anos como Engenheiro de Sofware com experiências em áreas como Desenvolvimento Web, Data Science e Machine Learning.
+            <br>Apaixonado por tecnologia, música e futebol. Sempre em busca de aprender e crescer cada vez mais.
+          </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item" title="Facebook">
               <a href="https://www.facebook.com/eduardoluiz17" target="_blank">
@@ -110,10 +112,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Universidade Federal de Pernambuco</h3>
               <div class="subheading mb-3">Bacharelado em Ciência da Computação</div>
-              <div>Cursando</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Agosto 2015 - Junho 2020 (previsão)</span>
+              <span class="text-primary">Agosto 2015 - 2022</span>
             </div>
           </div>
         </div>
@@ -129,38 +130,73 @@
               <i class="devicons devicons-python" title="Python"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-angular" title="Angular"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-nodejs" title="Node.js"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-mongodb" title="mongodb"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-ionic" title="ionic"></i>
+              <i class="devicons devicons-go" title="Golang"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-javascript" title="Javascript"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-java" title="Java"></i>
+              <i class="devicons devicons-django" title="Django"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-photoshop" title="Photoshop"></i>
+              <i class="devicons devicons-nodejs" title="Node.js"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-illustrator" title="Illustrator"></i>
+              <i class="devicons devicons-react" title="React"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-mongodb" title="mongodb"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-mysql" title="mysql"></i>
             </li>
           </ul>
+
+          <div class="subheading mb-3">Idiomas</div>
+          <div class="resume-content mr-auto">
+            <p>Português - Nativo</p>
+          </div>
+          <div class="resume-content mr-auto">
+            <p>Inglês - Avançado</p>
+          </div>
+
         </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interesses</h2>
-          <p>Além dos estudos em Ciência da Computação gosto de praticar esportes como futebol e basquete. Sou apaixonado por fotografia e assim desenvolvi habilidades com edição de imagens e vídeos.</p>
-          <p class="mb-0">No meu tempo em casa costumo ler livros e ouvir diversos podcasts sobre tecnologia. Além disso, gosto de ler e assistir as diversas obras da cultura geek.</p>
+          <h2 class="mb-5">Experiências</h2>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">VERT Capital</h3>
+              <div class="subheading mb-3">Engenheiro de Software</div>
+              <p>Desenvolvimento e manutenção de microserviços.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Junho 2022 - Atualmente</span>
+            </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Elife</h3>
+              <div class="subheading mb-3">Desenvolvedor FullStack</div>
+              <p>Desenvolvimento e manutenção de assistentes virtuais para diversas empresas.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Julho 2021 - Maio 2022</span>
+            </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">LIVE - Laboratório de Inovação Veicular</h3>
+              <div class="subheading mb-3">Pesquisador de Inteligência Artificial</div>
+              <p>Pesquisa e desenvolvimento em Intelingência Artificial aplicada no contexto de mobilidade urbana e smart cities.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Abril 2019 - Julho 2021</span>
+            </div>
+          </div>
+        </div>
         </div>
       </section>
     </div>
