--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li class="nav-item"><a id="nav-experience" class="nav-link js-scroll-trigger" href="#experience">Experiência</a></li>
                     <li class="nav-item"><a id="nav-education" class="nav-link js-scroll-trigger" href="#education">Educação</a></li>
                     <li class="nav-item"><a id="nav-skills" class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
-                    <li class="nav-item"><a id="nav-interests" class="nav-link js-scroll-trigger" href="#interests">Interesses</a></li>
+                  <!--  <li class="nav-item"><a id="nav-interests" class="nav-link js-scroll-trigger" href="#interests">Interesses</a></li>-->
                 </ul>
             </div>
         </nav>
@@ -50,7 +50,7 @@
                         <span class="text-primary">Luiz</span>
                     </h1>
                     <div id="contact-info" class="subheading mb-5">
-                        Recife-PE · Brasil · (81) 97304-3045 ·
+                        <span id="contact-info-text">Recife-PE · Brasil · (81) 97304-3045 ·</span>
                         <a id="contact-info-email" href="mailto:eduardoluiz017@gmail.com">eduardoluiz017@gmail.com</a>
                     </div>
                     <p id="introduction" class="lead mb-5">Bacharel em Ciência da Computação atuando há 5 anos como Engenheiro de Sofware com experiências em áreas como Desenvolvimento Web, Data Science e Machine Learning. Apaixonado por tecnologia, música e futebol. Sempre em busca de aprender e crescer cada vez mais.</p>
@@ -66,30 +66,42 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experiências</h2>
+                    <h2 id="experience-title" class="mb-5">Experiências</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Software Engineer</h3>
+                            <h3 id="experience-item-one" class="mb-0">Engenheiro de Software</h3>
                             <div class="subheading mb-3">VERT Capital</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <p id="experience-description-one">Como Engenheiro de Software em uma empresa do mercado financeiro, desenvolvo e mantenho microserviços essenciais, focando na alta disponibilidade e segurança. Utilizo as melhores práticas de código e arquitetura de software, colaborando em um ambiente ágil para contribuir com ideias inovadoras que melhoram continuamente os processos de desenvolvimento. Além disso, atuo diretamente na resolução de problemas técnicos complexos, trabalhando para otimizar a performance e a escalabilidade dos sistemas.</p>
+                            <span class="badge badge-primary">Python</span>
+                            <span class="badge badge-primary">Golang</span>
+                            <span class="badge badge-primary">Kafka</span>
+                            <span class="badge badge-primary">MySQL</span>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2022 - Present</span></div>
+                        <div class="flex-shrink-0"><span id="experience-date-one" class="text-primary">Junho 2022 - Presente</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">FullStack Developer</h3>
+                            <h3 id="experience-item-two" class="mb-0">Desenvolvedor FullStack</h3>
                             <div class="subheading mb-3">Elife</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <p id="experience-description-two">Desenvolvimento e manutenção de assistentes virtuais para empresas de diversos segmentos. Sempre focando em proporcionar uma interação eficiente e inteligente entre usuários e sistemas automatizados.</p>
+                            <span class="badge badge-primary">Typescript</span>
+                            <span class="badge badge-primary">Nodejs</span>
+                            <span class="badge badge-primary">React</span>
+                            <span class="badge badge-primary">Mongodb</span>
+                            <span class="badge badge-primary">Dialogflow</span>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2021 - May 2022</span></div>
+                        <div class="flex-shrink-0"><span id="experience-date-two" class="text-primary">Julho 2021 - Maio 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Artificial Intelligence Researcher</h3>
-                            <div class="subheading mb-3">LIVE - Vehicular Innovation Lab</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 id="experience-item-three" class="mb-0">Pesquisador de Inteligência Artificial</h3>
+                            <div class="subheading mb-3">LIVE - Laboratório de Inovação Veicular</div>
+                            <p id="experience-description-three">Pesquisa e desenvolvimento em inteligência artificial focados em mobilidade urbana e smart cities, com criação e aprimoramento de algoritmos de otimização e inteligência artificial preditiva, visando novas abordagens e soluções para problemas complexos.</p>
+                            <span class="badge badge-primary">Python</span>
+                            <span class="badge badge-primary">Machine Learning</span>
+                            <span class="badge badge-primary">Data Science</span>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">April 2019 - July 2021</span></div>
+                        <div class="flex-shrink-0"><span id="experience-date-three" class="text-primary">Abril 2019 - Julho 2021</span></div>
                     </div>
                 </div>
             </section>
@@ -97,11 +109,11 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Educação</h2>
+                    <h2 id="education-title" class="mb-5">Educação</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Universidade Federal de Pernambuco</h3>
-                            <div class="subheading mb-3">Bacharelado em Ciência da Computação</div>
+                            <h3 id="education-university" class="mb-0">Universidade Federal de Pernambuco</h3>
+                            <div id="education-course" class="subheading mb-3">Bacharelado em Ciência da Computação</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2015 - 2022</span></div>
                     </div>
@@ -111,59 +123,60 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Habilidades</h2>
-                    <div class="subheading mb-3">Linguagens de Programação & Ferramentas</div>
+                    <h2 id="skills-title" class="mb-5">Habilidades</h2>
+                    <div id="skills-first-subtitle" class="subheading mb-3">Linguagens de Programação & Ferramentas</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-python" title="Python"></i></li>
                         <li class="list-inline-item"><i class="fab fa-golang" title="Golang"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square" title="Javascript"></i></li>
+                        <li class="list-inline-item"><i class="devicon-javascript-plain" title="Javascript"></i></li>
+                        <li class="list-inline-item"><i class="devicon-typescript-plain" title="Typescript"></i></li>
                         <li class="list-inline-item"><i class="devicon-django-plain-wordmark" title="Django"></i></li>
                         <li class="list-inline-item"><i class="fab fa-node" title="Nodejs"></i></li>
                         <li class="list-inline-item"><i class="fab fa-react" title="React"></i></li>
                     </ul>
-                    <div class="subheading mb-3">Fluxo de Trabalho</div>
+                    <div id="skills-second-subtitle" class="subheading mb-3">Fluxo de Trabalho</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            API-First, Design & Development
+                            <span id="workflow-item-one">Abordagem API-First no Design & Development</span>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Testing and Debugging Multiplatform Systems
+                            <span id="workflow-item-two">Testes e Debugging de Sistemas Multiplataforma</span>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Data Handling & Optimization
+                            <span id="workflow-item-three">Manipulação e Otimização de Dados</span>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Machine Learning Integration
+                            <span id="workflow-item-four">Integração com Machine Learning</span>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            <span id="workflow-item-five">Equipes Cross Functional</span>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            <span id="workflow-item-six">Desenvolvimento Ágil & Scrum</span>
                         </li>
                     </ul>
                     <div  class="subheading mb-3"></div>
-                    <div class="subheading mb-3">Idiomas</div>
+                    <div id="skills-third-subtitle" class="subheading mb-3">Idiomas</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Português - Nativo
+                            <span id="language-one">Português · Nativo</span>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Inglês - Avançado
+                            <span id="language-two">Inglês · Avançado</span>
                         </li>
                     </ul>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Interests-->
+            <!-- Interests
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interesses</h2>
@@ -171,23 +184,14 @@
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
                 </div>
             </section>
+            -->
             <hr class="m-0" />
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="js/translation.js"></script>
 
-        <script>
-            function changeLanguage(lang) {
-              document.getElementById('introduction').innerText = langData[lang]['introduction'];
-              document.getElementById('nav-about').innerText = langData[lang]['nav-about'];
-              document.getElementById('nav-skills').innerText = langData[lang]['nav-skills'];
-              document.getElementById('nav-education').innerText = langData[lang]['nav-education'];
-              document.getElementById('nav-interests').innerText = langData[lang]['nav-interests'];
-              document.getElementById('nav-experience').innerText = langData[lang]['nav-experience'];
-              document.getElementById('contact-info').innerText = langData[lang]['contact-info'] + document.getElementById('contact-info').getElementById("contact-info-email");
-            }
-        </script>
     </body>
 </html>
