--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <span class="badge badge-primary">Python</span>
                             <span class="badge badge-primary">Golang</span>
                             <span class="badge badge-primary">Kafka</span>
-                            <span class="badge badge-primary">MySQL</span>
+                            <span class="badge badge-primary">PostgreSQL</span>
                         </div>
                         <div class="flex-shrink-0"><span id="experience-date-one" class="text-primary">Junho 2022 - Presente</span></div>
                     </div>
@@ -133,6 +133,9 @@
                         <li class="list-inline-item"><i class="devicon-django-plain-wordmark" title="Django"></i></li>
                         <li class="list-inline-item"><i class="fab fa-node" title="Nodejs"></i></li>
                         <li class="list-inline-item"><i class="fab fa-react" title="React"></i></li>
+                        <li class="list-inline-item"><i class="devicon-postgresql-plain" title="PostgreSQL"></i></li>
+                        <li class="list-inline-item"><i class="devicon-mongodb-plain-wordmark" title="MongoDB"></i></li>
+
                     </ul>
                     <div id="skills-second-subtitle" class="subheading mb-3">Fluxo de Trabalho</div>
                     <ul class="fa-ul mb-0">
