add target _blank

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                     </div>
                     <p id="introduction" class="lead mb-5">Bacharel em Ciência da Computação atuando há 5 anos como Engenheiro de Sofware com experiências em áreas como Desenvolvimento Web, Data Science e Machine Learning. Apaixonado por tecnologia, música e futebol. Sempre em busca de aprender e crescer cada vez mais.</p>
                     <div class="social-icons">
-                        <a class="social-icon" title="Linkedin" href="https://www.linkedin.com/in/eduardoluizs/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" title="Github" href="https://github.com/eduardoluiz7"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" title="Medium" href="https://medium.com/@eduardoluizs"><i class="fab fa-medium"></i></a>
-                        <a class="social-icon" title="Facebook" href="https://www.facebook.com/eduardoluiz0"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" target="_blank" title="Linkedin" href="https://www.linkedin.com/in/eduardoluizs/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" target="_blank" title="Github" href="https://github.com/eduardoluiz7"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" target="_blank" title="Medium" href="https://medium.com/@eduardoluizs"><i class="fab fa-medium"></i></a>
+                        <a class="social-icon" target="_blank" title="Facebook" href="https://www.facebook.com/eduardoluiz0"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
