--- a/index.html
+++ b/index.html
@@ -50,9 +50,14 @@
                         <span class="text-primary">Luiz</span>
                     </h1>
                     <div id="contact-info" class="subheading mb-5">
-                        <span id="contact-info-text">Recife-PE · Brasil · (81) 97304-3045 ·</span>
-                        <a id="contact-info-email" href="mailto:eduardoluiz017@gmail.com">eduardoluiz017@gmail.com</a>
-                    </div>
+                      <div>
+                          <span id="contact-info-text">Recife-PE · Brasil · (81) 97304-3045 ·</span>
+                          <a id="contact-info-email" href="mailto:eduardoluiz017@gmail.com">eduardoluiz017@gmail.com</a>
+                      </div>
+                      <a href="assets/eduardo_cv.pdf" target="_blank" download="eduardo_cv">
+                          <button class="cv-button">Download CV</button>
+                      </a>
+                  </div>
                     <p id="introduction" class="lead mb-5">Bacharel em Ciência da Computação atuando há 5 anos como Engenheiro de Sofware com experiências em áreas como Desenvolvimento Web, Data Science e Machine Learning. Apaixonado por tecnologia, música e futebol. Sempre em busca de aprender e crescer cada vez mais.</p>
                     <div class="social-icons">
                         <a class="social-icon" target="_blank" title="Linkedin" href="https://www.linkedin.com/in/eduardoluizs/"><i class="fab fa-linkedin-in"></i></a>
